--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Krisso
+title: The mirror of Kris
 description: If the title is not self explanatory, this is quite some site. Enjoy!
 github_username: kulekriss
 
